Adding Patients and Appointment Slots definition in swagger yaml
